<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:onClick="startService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/btnStart"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="stopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/btnStop"
        android:layout_below="@+id/btnStart"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="bindService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind"
        android:id="@+id/btnBind"
        android:layout_below="@+id/btnStop"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="unbindService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unbind"
        android:id="@+id/btnUnbind"
        android:layout_below="@+id/btnBind"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="countService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:id="@+id/btnCount"
        android:layout_below="@+id/btnUnbind"
        android:layout_alignLeft="@+id/btnUnbind"
        android:layout_alignStart="@+id/btnUnbind" />
</RelativeLayout>
